--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,18 @@
 		<script language="javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 		<script language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
 		<script language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
+		<script language="javascript" src="https://www.youtube.com/iframe_api"></script>
 
 		<script language="javascript" src="/media/js/radio.js"></script>
 	</head>
 
 	<body>
 		<h1></h1>
+
+		<div id="shade"></div>
+
 		<div id="player"></div>
+
 		<div id="status"></div>
 
 		<div id="tools">
@@ -24,10 +29,19 @@
 			<select id="sub-selector">
 				<option value="/r/music">/r/music</option>
 				<option value="/r/listentothis">/r/listentothis</option>
+				<option value="/r/90srock">/r/90srock</option>
+				<option value="/r/90salternative">/r/90salternative</option>
+				<option value="/r/classicrock">/r/classicrock</option>
+				<option value="/r/indie">/r/indie</option>
+				<option value="/r/indie_rock">/r/indie_rock</option>
+				<option value="/r/postrock">/r/postrock</option>
 				<option value="/r/folk">/r/folk</option>
 				<option value="/r/folkrock">/r/folkrock</option>
+				<option value="/r/hiphopheads">/r/hiphopheads</option>
 				<option value="/r/chillout">/r/chillout</option>
 				<option value="/r/dubstep">/r/dubstep</option>
+				<option value="/r/electronicmusic">/r/electronicmusic</option>
+				<option value="/r/coversongs">/r/coversongs</option>
 			</select>
 
 			<a href="#next" class="button next" id="next" title="Next">&rarr;</a>
