--- a/media/css/radio.sass
+++ b/media/css/radio.sass
@@ -1,5 +1,6 @@
 html, body
 	font-family: segoe ui, arial, sans-serif
+	background: #eee
 
 h1
 	font-style: italic
@@ -16,15 +17,39 @@ h1
 	right: 0
 	height: 40px
 	padding: 10px
-	background: #ddd
+	background: #222
 	text-align: center
 
 #player
-	max-width: 640px
-	height: 480px
+	max-width: 70%
 	margin: 40px auto
 	box-shadow: 0 0 30px rgba(0,0,0,0.4)
 	background: #222
+	height: 320px
+
+	@media (min-height: 500px)
+		height: 400px
+
+	@media (min-height: 600px)
+		height: 500px
+
+	@media (min-height: 700px)
+		height: 600px
+
+	@media (min-height: 800px)
+		height: 700px
+
+	@media (min-height: 900px)
+		height: 800px
+
+#shade
+	position: fixed
+	top: 0
+	bottom: 0
+	left: 0
+	right: 0
+	background: rgba(255,255,255, 0.9) url(/media/images/kitty.gif) 50% 50% no-repeat
+	z-index: 1001
 
 #status
 	margin: 40px auto
@@ -34,14 +59,16 @@ h1
 
 select
 	padding: 5px
-	border: 1px solid #aaa
-	background: #f5f5f5
+	border: 1px solid #444
+	background: #333
+	color: #ddd
 	width: 200px
 	display: inline-block
+	outline: none
 
 .button
 	display: inline-block
-	line-height: 21px
+	line-height: 26px
 	padding: 5px 15px 
 	margin: 0 5px
 	color: #eee
@@ -49,4 +76,8 @@ select
 	box-shadow: 1px 1px 2px rgba(0,0,0,0.1)
 	cursor: pointer
 	text-decoration: none
-	background: #4196BE
+	background: #333
+	outline: none
+
+	&:hover
+		background: #666
