--- a/media/css/radio.sass
+++ b/media/css/radio.sass
@@ -52,10 +52,12 @@ h1
 	z-index: 1001
 
 #status
-	margin: 40px auto
-	width: 300px
+	color: #eee
 	font-style: italic
 	text-align: center
+	position: absolute
+	right: 20px
+	top: 20px
 
 select
 	padding: 5px
