--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,13 @@
 	</head>
 
 	<body>
-		<h1></h1>
-
 		<div id="shade"></div>
 
 		<div id="player"></div>
 
 		<div id="tools">
+			<div id="story"></div>
+
 			<a href="#prev" class="button prev" id="prev" title="Previous">&larr;</a>
 			
 			<select id="sub-selector">
@@ -29,17 +29,37 @@
 				<option value="/r/listentothis">/r/listentothis</option>
 				<option value="/r/90srock">/r/90srock</option>
 				<option value="/r/90salternative">/r/90salternative</option>
+				<option value="/r/classicalmusic">/r/classicalmusic</option>
 				<option value="/r/classicrock">/r/classicrock</option>
+				<option value="/r/country">/r/country</option>
 				<option value="/r/indie">/r/indie</option>
 				<option value="/r/indie_rock">/r/indie_rock</option>
 				<option value="/r/postrock">/r/postrock</option>
+				<option value="/r/flocked">/r/flocked</option>
 				<option value="/r/folk">/r/folk</option>
 				<option value="/r/folkrock">/r/folkrock</option>
+				<option value="/r/folktronica">/r/folktronica</option>
+				<option value="/r/metal">/r/metal</option>
+				<option value="/r/metalcore">/r/metalcore</option>
+				<option value="/r/progmetal">/r/progmetal</option>
+				<option value="/r/punk">/r/punk</option>
+				<option value="/r/ska">/r/ska</option>
+				<option value="/r/90shiphop">/r/90shiphop</option>
 				<option value="/r/hiphopheads">/r/hiphopheads</option>
+				<option value="/r/rap">/r/rap</option>
 				<option value="/r/chillout">/r/chillout</option>
+				<option value="/r/dnb">/r/dnb</option>
 				<option value="/r/dubstep">/r/dubstep</option>
+				<option value="/r/electrohouse">/r/electrohouse</option>
 				<option value="/r/electronicmusic">/r/electronicmusic</option>
+				<option value="/r/futurebeats">/r/futurebeats</option>
+				<option value="/r/trance">/r/trance</option>
 				<option value="/r/coversongs">/r/coversongs</option>
+				<option value="/r/pianocovers">/r/pianocovers</option>
+				<option value="/r/remixxd">/r/remixxd</option>
+				<option value="/r/jazz">/r/jazz</option>
+				<option value="/r/kpop">/r/kpop</option>
+				<option value="/r/treemusic">/r/treemusic</option>
 			</select>
 
 			<a href="#next" class="button next" id="next" title="Next">&rarr;</a>
