--- a/media/css/radio.sass
+++ b/media/css/radio.sass
@@ -78,6 +78,23 @@ a
 		&:hover
 			opacity: 0.9
 
+.notifier
+	background: #111
+	color: #f5f5f5
+	cursor: pointer
+	padding: 20px
+	width: 600px
+	position: fixed
+	top: 10%
+	left: 50%
+	margin-left: -300px
+	z-index: 1002
+	border-radius: 10px
+	font-weight: 400
+	font-style: italic
+	text-align: center
+	opacity: 0.8
+
 #subreddit-input
 	padding: 10px
 	width: 95%
